# Juggernaut

./: CMakeLists.txt  build.bat
src/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/renderer/include/: enums.hpp  juggernaut_enums.hpp  juggernaut_renderer.hpp  renderer.hpp
src/renderer/include/utility/: console_output.hpp
src/renderer/include/vk/: device.hpp  extensions.hpp  instance.hpp  queue.hpp  queue_families.hpp  validation_layers.hpp  vk_convert.hpp  vk_debug_messenger.hpp  vk_device.hpp  vk_image_view.hpp  vk_instance.hpp  vk_pipeline.hpp  vk_queue.hpp  vk_renderer.hpp  vk_swapchain.hpp  vk_window_surface.hpp  window_surface.hpp
src/renderer/source/: juggernaut_renderer.cpp  renderer.cpp
src/renderer/source/utility/: console_output.cpp
src/renderer/source/vk/: debug_messenger.cpp  device.cpp  extensions.cpp  instance.cpp  queue.cpp  queue_families.cpp  swapchain.cpp  validation_layers.cpp  vk_convert.cpp  vk_debug_messenger.cpp  vk_device.cpp  vk_extensions.cpp  vk_image_view.cpp  vk_instance.cpp  vk_pipeline.cpp  vk_queue.cpp  vk_queue_families.cpp  vk_renderer.cpp  vk_swapchain.cpp  vk_validation_layers.cpp  vk_window_surface.cpp  window_surface.cpp
src/resources/shaders/: triangle.frag  triangle.vert
src/resources/shaders/spirv/: triangle.frag.spirv  triangle.vert.spirv
src/standalone/: CMakeLists.txt
src/standalone/source/: main.cpp
